@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-05T01:17:05Z",
+  "timestamp" : "2025-09-06T01:14:42Z",
   "count_outdated" : 1935,
   "uniques_outdated" : 1174,
-  "count" : 1947,
-  "uniques" : 1186,
+  "count" : 1948,
+  "uniques" : 1187,
   "clones" : [
     {
       "timestamp": "2025-08-24T00:00:00Z",
@@ -88,6 +88,15 @@
     },
     {
       "timestamp": "2025-09-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
