@@ -1,5 +1,5 @@
 {
-  "count": 12,
+  "count": 13,
   "uniques": 6,
   "clones": [
     {
@@ -49,6 +49,11 @@
     },
     {
       "timestamp": "2025-09-03T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-09-05T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
